# ZKAuth

./: .gitignore  DockerFIle
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/api/: Cargo.toml
backend/api/src/: args.rs  main.rs
backend/api/src/handlers/: auth.rs
backend/api/src/models/: user.rs
backend/api/src/utils/: mod.rs  setup_surrealdb.rs
forntend/: Cargo.toml
scripts/docker/: 1_run_surrealdb.sh
scripts/surrealdb/: 1_start_surrealdb.sh
