[package]
edition = "2021"
name = "api"
version = "0.1.0"

[dependencies]
axum.workspace = true
clap.workspace = true
colored.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
surrealdb.workspace = true
serde_json.workspace = true
